# osm-polygon-wikidata-sentence-relevance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  config.py  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md  data-contract.md  index.md  reproducibility.md
docs/architecture/: overview.md
docs/architecture/decisions/: 0001-domain-package-layout.md  0002-contracts-package.md
docs/guides/: development.md  getting-started.md  grid5000.md  reproducibility.md
docs/reference/: api.md  cli.md  data-contract.md
docs/superpowers/plans/: 2026-07-20-streaming-production-completion.md  2026-07-21-codebase-consolidation.md  2026-07-22-afghanistan-llm-labeling.md  2026-07-24-afghanistan-sentence-boundary-quality.md
docs/superpowers/specs/: 2026-07-21-codebase-consolidation-design.md  2026-07-22-afghanistan-llm-labeling-design.md  2026-07-24-afghanistan-sentence-boundary-quality-design.md
scripts/: __init__.py  audit_upstream_correction.py  render_assets.py  verify_distribution.py
scripts/audit/: join_integrity_audit.py  run_audit_remote.sh
scripts/grid5000/: _cache_ref_validator.sh  _finalize_persist.sh  _run_metadata.py  _validate_artifact.py  gpu_preflight.py  run_afghanistan_labeling.sh  run_afghanistan_labeling_job.sh  run_gpu_build.sh  run_gpu_build_job.sh  run_gpu_smoke.sh  run_gpu_smoke_job.sh  run_streaming_build.sh  run_streaming_build_job.sh  run_streaming_finalization.sh  run_streaming_finalization_job.sh  submit_afghanistan_labeling.sh  submit_gpu_build.sh  submit_gpu_smoke.sh  submit_streaming_build.sh  submit_streaming_finalization.sh
scripts/streaming/: __init__.py  data_root.py  downloader.py  driver.py  finalization.py  offload.py
src/osm_polygon_sentence_relevance/: __init__.py  acquisition.py  cli.py  constants.py  discovery.py  errors.py  exporter.py  finalization.py  joins.py  loading.py  pipeline.py  preprocessing.py  sat_adapter.py  schemas.py  segmentation.py  sentence_table.py  settings.py
src/osm_polygon_sentence_relevance/_export/: __init__.py  checksum.py  manifest.py
src/osm_polygon_sentence_relevance/application/: __init__.py  checkpoint.py  cli.py  pipeline.py  settings.py
src/osm_polygon_sentence_relevance/contracts/: __init__.py  _exception_chain.py  constants.py  errors.py
src/osm_polygon_sentence_relevance/ingestion/: __init__.py  acquisition.py  discovery.py  loading.py
src/osm_polygon_sentence_relevance/joins/: __init__.py  _composition.py  _integrity.py  _projection.py  _wikipedia.py  _wikivoyage.py
src/osm_polygon_sentence_relevance/labeling/: __init__.py  canary.py  checkpoint.py  cli.py  contracts.py  engine.py  finalization.py  prompt.py  publication.py  runner.py  validation.py
src/osm_polygon_sentence_relevance/output/: __init__.py  atomic.py  dataset_card.py  exporter.py  manifest.py  plots.py  profile.py  validation.py  validation_publication.py
src/osm_polygon_sentence_relevance/publishing/: __init__.py  huggingface.py
src/osm_polygon_sentence_relevance/sentences/: __init__.py  _wtpsplit_device.py  boundaries.py  device.py  finalization.py  preprocessing.py  sat.py  segmentation.py  table.py
tests/: helpers.py  test_acquisition.py  test_amendments.py  test_cli.py  test_constants.py  test_discovery.py  test_exporter.py  test_finalization.py  test_joins_combined.py  test_joins_wikipedia.py  test_joins_wikivoyage.py  test_loading.py  test_package.py  test_pipeline.py  test_preprocessing.py  test_project_metadata.py  test_sat_adapter.py  test_schemas.py  test_segmentation.py  test_segmented_schema.py  test_sentence_table.py  test_settings.py
tests/compatibility/: test_package.py  test_public_imports.py  test_supported_surface.py
tests/integration/: test_cli.py  test_cli_device.py  test_cli_hub.py  test_cli_publishing.py  test_distribution.py  test_labeling_cli.py  test_pipeline.py
tests/support/: __init__.py  arrow_factories.py  checksums.py  fake_results.py  parquet_layouts.py
tests/unit/application/: test_checkpoint_correctness_amendment.py  test_checkpoint_module_boundaries.py  test_checkpoint_recovery.py  test_cli_validation_branches.py  test_pipeline_checkpoint.py  test_pipeline_single_shard.py  test_pipeline_single_shard_validation.py
tests/unit/contracts/: test_contracts_canonical_layout.py  test_distribution_verifier.py  test_documentation_consistency.py  test_exception_chain.py  test_osm_tags_conversion.py  test_project_metadata.py  test_repository_hygiene.py  test_schemas.py  test_segmented_schema.py  test_settings.py  test_source_structure.py
tests/unit/ingestion/: test_acquisition.py  test_loading.py
tests/unit/joins/: test_joins_combined.py  test_joins_integrity.py  test_joins_wikipedia.py  test_joins_wikivoyage.py  test_joins_wikivoyage_multisite.py
tests/unit/labeling/: __init__.py  test_canary.py  test_checkpoint.py  test_engine.py  test_finalization.py  test_prompt.py  test_runner.py  test_validation.py
tests/unit/output/: test_atomic_install.py  test_card_rendering_edge_cases.py  test_dataset_card.py  test_dataset_card_amendment.py  test_dataset_card_final.py  test_dataset_card_profile.py  test_dataset_card_provenance.py  test_dataset_profile.py  test_exporter.py  test_output_module_boundaries.py  test_profile_error_paths.py  test_publication_contract.py  test_publication_plots.py  test_publication_validation.py  test_validation.py
tests/unit/publishing/: test_huggingface.py  test_public_import_smoke.py
tests/unit/scripts/: test_afghanistan_labeling_launchers.py  test_afghanistan_labeling_sh.py  test_cache_ref_validator_sh.py  test_finalize_persist_sh.py  test_gpu_preflight.py  test_grid5000_doc.py  test_run_gpu_build_job_sh.py  test_run_gpu_build_sh.py  test_run_gpu_smoke_job_sh.py  test_run_gpu_smoke_sh.py  test_run_metadata_cli.py  test_submit_gpu_build_sh.py  test_submit_gpu_smoke_sh.py  test_submit_streaming_finalization_sh.py  test_validate_artifact.py
tests/unit/sentences/: test_boundaries.py  test_device_resolver.py  test_finalization.py  test_preprocessing.py  test_quality_defaults.py  (+5 more)
(+27 files in other folders)
