[project]
name = "osm-polygon-sentence-relevance"
version = "0.1.0"
description = "Sentence-level relevance dataset derived from OSM polygons, Wikipedia, and Wikivoyage."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyarrow",
]

[project.optional-dependencies]
segmentation = [
    "wtpsplit>=2.2.1,<3",
]
hub = [
    "huggingface_hub>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
osm-polygon-sentence-relevance = "osm_polygon_sentence_relevance.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
