[project]
name = "osm-polygon-sentence-relevance"
version = "0.1.0"
description = "Deterministic sentence-level relevance dataset derived from OSM polygons, Wikipedia, and Wikivoyage sections."
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "NoeFlandre" },
]
keywords = [
    "openstreetmap",
    "wikidata",
    "wikipedia",
    "wikivoyage",
    "sentence-segmentation",
    "dataset",
    "deterministic",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Typing :: Typed",
]
dependencies = [
    "pyarrow",
]

[project.urls]
Homepage = "https://github.com/NoeFlandre/osm-polygon-wikidata-sentence-relevance"
Repository = "https://github.com/NoeFlandre/osm-polygon-wikidata-sentence-relevance"
Issues = "https://github.com/NoeFlandre/osm-polygon-wikidata-sentence-relevance/issues"
Documentation = "https://github.com/NoeFlandre/osm-polygon-wikidata-sentence-relevance/tree/main/docs"
Changelog = "https://github.com/NoeFlandre/osm-polygon-wikidata-sentence-relevance/blob/main/CHANGELOG.md"

[project.optional-dependencies]
segmentation = [
    # Pinned to the exact version the placement adapter is structurally
    # tested against. The adapter in ``sentences/_wtpsplit_device.py``
    # refuses any other version at runtime so a wider range would only
    # invite a configuration we have not verified. See ``_WTPSPLIT_SUPPORTED_VERSION``
    # in ``sentences/sat.py``.
    "wtpsplit==2.2.1",
    "torch>=2.2,<3",
]
hub = [
    "huggingface_hub>=0.20.0",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "ruff>=0.14,<0.15",
    "mypy>=1.18,<3",
]

[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
osm_polygon_sentence_relevance = ["py.typed"]

[project.scripts]
osm-polygon-sentence-relevance = "osm_polygon_sentence_relevance.application.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=osm_polygon_sentence_relevance --cov-branch"


[tool.coverage.run]
branch = true
source = ["osm_polygon_sentence_relevance"]
omit = [
    "*/tests/*",
    "src/osm_polygon_sentence_relevance/*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 95

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors (correctness)
    "W",    # pycodestyle warnings
    "F",    # Pyflakes: unused imports/variables
    "I",    # isort: import ordering
    "UP",   # pyupgrade: safe modernization
    "B",    # flake8-bugbear: common correctness bugs
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "PT",   # flake8-pytest-style
    "RUF100",  # unused-noqa: catches stale or ineffective suppression comments
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["osm_polygon_sentence_relevance"]


# ---------------------------------------------------------------------------
# mypy: practical static type gate (src/ only, Python 3.12).
# Optional heavy dependencies (wtpsplit, huggingface_hub) are not installed
# in the base dev environment; their imports are type-checked lazily at
# runtime, so missing stubs are scoped per-module rather than globally.
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
files = ["src"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
# wtpsplit is only imported lazily inside SaTSentenceSegmenter._get_model.
# It is an optional extra; stubs are not guaranteed in the base env.
module = "wtpsplit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# pyarrow does not ship type stubs or a py.typed marker; treat its
# surface as untyped rather than blocking the src/ gate.
module = "pyarrow.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
# huggingface_hub is only imported lazily inside acquire_dataset_snapshot.
# It is an optional extra; stubs are not guaranteed in the base env.
module = "huggingface_hub.*"
ignore_missing_imports = true
